--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ button:focus {
           border-radius: 0px;
           box-shadow: none;
           margin: 0px;
-          background: #ffd200; }
+          background: #186c84; }
           @media (min-width: 992px) {
             .header_area .navbar .nav .nav-item.submenu ul {
               position: absolute;
@@ -281,7 +281,7 @@ button:focus {
     top: -70px;
     left: 0;
     right: 0;
-    background: #ffd200;
+    background: #186c84;
     transform: translateY(70px);
     transition: transform 500ms ease, background 500ms ease;
     -webkit-transition: transform 500ms ease, background 500ms ease;
@@ -418,7 +418,7 @@ button:focus {
 /* Projects Area css
 ============================================================================================ */
 .projects_fillter {
-  background: #ffd200; }
+  background: #186c84; }
   .projects_fillter .filter {
     position: relative;
     text-align: center;
@@ -2740,7 +2740,7 @@ h6 {
     margin: 4px;
     font-weight: 500;
     text-transform: uppercase;
-    background: #ffd200; }
+    background: #186c84; }
     .newsletter_form .navbar-form .genric-btn:hover {
       background-color: #e45447;
       color: #ffffff; }
@@ -2845,7 +2845,7 @@ h6 {
 /* Footer Area css
 ============================================================================================ */
 .footer_area {
-  background: #ffd200; }
+  background: #186c84; }
 
 .social_widget .f_title h4 {
   font-size: 21px;
