--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ button:focus {
   .main-title h1 {
     font-family: "Poppins", sans-serif;
     font-size: 48px;
-    color: #222222;
+    color: #fff;
     font-weight: 700;
     margin-bottom: 20px;
     padding-bottom: 15px;
