--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ button:focus {
   .main-title h1 {
     font-family: "Poppins", sans-serif;
     font-size: 48px;
-    color: #fff;
+    color: #222222;
     font-weight: 700;
     margin-bottom: 20px;
     padding-bottom: 15px;
@@ -342,7 +342,7 @@ button:focus {
     .banner-content .primary-btn:hover {
       background: transparent;
       border-color: #fff;
-      color: #000; }
+      color: #fff; }
   .banner-content h1 {
     color: #000;
     font-size: 60px;
@@ -355,7 +355,7 @@ button:focus {
     font-size: 30px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    color: #000;
+    color: #ff;
     margin-bottom: 30px; }
     @media (max-width: 991px) {
       .banner-content h3 {
