--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ button:focus {
   .main-title h1 {
     font-family: "Poppins", sans-serif;
     font-size: 48px;
-    color: #fff;
+    color: #222222;
     font-weight: 700;
     margin-bottom: 20px;
     padding-bottom: 15px;
@@ -218,7 +218,7 @@ button:focus {
           border-radius: 0px;
           box-shadow: none;
           margin: 0px;
-          background: #186c84; }
+          background: #ffd200; }
           @media (min-width: 992px) {
             .header_area .navbar .nav .nav-item.submenu ul {
               position: absolute;
@@ -281,7 +281,7 @@ button:focus {
     top: -70px;
     left: 0;
     right: 0;
-    background: #186c84;
+    background: #ffd200;
     transform: translateY(70px);
     transition: transform 500ms ease, background 500ms ease;
     -webkit-transition: transform 500ms ease, background 500ms ease;
@@ -341,17 +341,8 @@ button:focus {
     color: #fff; }
     .banner-content .primary-btn:hover {
       background: transparent;
-<<<<<<< HEAD
-      border-color: #fff;
-<<<<<<< HEAD
-      color: #fff; }
-=======
       border-color: #e45447;
       color: #000; }
->>>>>>> parent of bd78af0... Update style.css
-=======
-      color: #000; }
->>>>>>> parent of e9f9687... Update style.css
   .banner-content h1 {
     color: #000;
     font-size: 60px;
@@ -427,7 +418,7 @@ button:focus {
 /* Projects Area css
 ============================================================================================ */
 .projects_fillter {
-  background: #186c84; }
+  background: #ffd200; }
   .projects_fillter .filter {
     position: relative;
     text-align: center;
@@ -455,7 +446,7 @@ button:focus {
       .projects_fillter .filter li:last-child {
         margin-right: 0px; }
       .projects_fillter .filter li.active, .projects_fillter .filter li:hover {
-        color: #fff; }
+        color: #e45447; }
 
 .projects_inner {
   margin-bottom: -30px; }
@@ -2749,7 +2740,7 @@ h6 {
     margin: 4px;
     font-weight: 500;
     text-transform: uppercase;
-    background: #186c84; }
+    background: #ffd200; }
     .newsletter_form .navbar-form .genric-btn:hover {
       background-color: #e45447;
       color: #ffffff; }
@@ -2854,7 +2845,7 @@ h6 {
 /* Footer Area css
 ============================================================================================ */
 .footer_area {
-  background: #186c84; }
+  background: #ffd200; }
 
 .social_widget .f_title h4 {
   font-size: 21px;
